--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "coveralls": "^2.11.4",
     "eslint": "^1.5.0",
     "gulp": "^3.9.0",
-    "gulp-run": "^1.6.11",
+    "gulp-coveralls": "^0.1.4",
     "mocha": "^2.3.2",
     "mocha-lcov-reporter": "0.0.2",
     "mocha-multi": "^0.7.1",
